# metaDMG-paper-metagenomic-simulations

./: .gitignore  BLR_1M.nc  _add_conf_intervals.py  _analysis_mapped_metaDMG.py  analysis.py  bam_test.py  bayesian_logistic_regression.py  config-Pitch6-local.yaml  config_mapping.yaml  config_small.yaml  create_lca_test_plots.py  create_simulation_comparison.py  create_viz_overview.py  example.nc  human_reference.py  make_classificiation.py  metaDMG-cpp  metaDMG_analysis.py  plot_utils.py  pretty_confusion_matrix.py  pyproject.toml  utils.py  utils_classification.py  visualize_simulation_comparison.py
figures/: Pitch-6.1000000.deam.comparison-CT.html  Pitch-6.1000000.deam.comparison-GA.html
